--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.56.2",
     "@xyflow/react": "^12.4.4",
+    "bun": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
