--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@lottiefiles/react-lottie-player": "^3.6.0",
