--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
-  },
   "dependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.9.1",
     "@hookform/resolvers": "^4.1.3",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -90,5 +88,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "overrides": {
+    "rollup": {
+      "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    }
   }
 }
