--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8080",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
@@ -50,6 +50,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "esbuild": "^0.25.2",
     "fuse.js": "^7.0.0",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.0",
@@ -90,9 +91,10 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.18"
+    "vite": "^6.3.2"
   },
   "resolutions": {
-    "vite": "^5.4.18"
+    "vite": "^6.3.2",
+    "esbuild": "^0.25.2"
   }
 }
