--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "esbuild": "^0.25.2",
     "fuse.js": "^7.0.0",
     "input-otp": "^1.1.0",
+    "jotai": "^2.12.3",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.330.0",
     "mapbox-gl": "^3.1.2",
