--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 8080",
+    "dev:safe": "vite --port 8080 --host --force",
+    "dev:debug": "VITE_DEBUG=true vite --port 8080 --host",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
