--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@vercel/analytics": "^1.1.2",
     "@xyflow/react": "^12.6.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
