--- a/package.json
+++ b/package.json
@@ -99,5 +99,10 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.1",
     "vite": "^6.3.2"
+  },
+  "overrides": {
+    "rollup": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   }
 }
