Update Vercel configuration to fix build issues

--- a/vercel.json
+++ b/vercel.json
@@ -16,5 +16,7 @@
       ]
     }
   ],
-  "buildCommand": "npm install --legacy-peer-deps && npm run build"
+  "buildCommand": "npm cache clean --force && npm install --legacy-peer-deps && npm run build",
+  "cleanUrls": true,
+  "trailingSlash": false
 } 
