--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,6 @@
       ]
     }
   ],
-  "buildCommand": "npm cache clean --force && rm -rf node_modules && npm install --legacy-peer-deps && npm run build",
   "cleanUrls": true,
-  "trailingSlash": false,
-  "ignoreCommand": "exit 0"
+  "trailingSlash": false
 } 
