Refactor: Update import statement for routing in App component
- Changed the import of the router in App.tsx from a named import to a default import for consistency with the module's export style.

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
       ]
     }
   ],
+  "buildCommand": "npm cache clean --force && rm -rf node_modules && npm install && npm run build",
   "cleanUrls": true,
   "trailingSlash": false
 } 
