Enhancement: Update Vercel configuration for improved build process and caching
- Modified the Cache-Control header to prevent caching, ensuring fresh content delivery.
- Updated the buildCommand to remove unnecessary directories before installation, streamlining the deployment process.
- Added a public property to the configuration for enhanced accessibility.

--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,13 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
+          "value": "no-store, no-cache, must-revalidate"
         }
       ]
     }
   ],
-  "buildCommand": "npm cache clean --force && rm -rf node_modules && npm install && npm run build",
+  "buildCommand": "rm -rf node_modules .next .cache dist && npm install && npm run build",
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "public": true
 } 
