--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.2.0",
     "@xyflow/react": "^12.6.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
