Enhancement: Implement default job steps and improve job step management in JobStepProgress component
- Introduced a default set of job steps to streamline the initial state of the JobStepProgress component.
- Refactored job step fetching logic to handle cases where no job ID is provided, improving error handling and user feedback.
- Enhanced task completion handling to update job steps more efficiently and ensure accurate state management.
- Improved UI elements for better user interaction and feedback during job progress tracking.

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "rimraf": "^5.0.5",
     "@humanwhocodes/config-array": "@eslint/config-array",
     "@humanwhocodes/object-schema": "@eslint/object-schema",
-    "inflight": "npm:lru-cache"
+    "inflight": "npm:lru-cache",
+    "uuid": "^9.0.1"
   }
 }
