--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,22 @@
         {
           "key": "Cache-Control",
           "value": "no-store, no-cache, must-revalidate"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
         }
       ]
     }
@@ -19,5 +35,9 @@
   "buildCommand": "rm -rf node_modules .next .cache dist && npm install && npm run build",
   "cleanUrls": true,
   "trailingSlash": false,
-  "public": true
+  "public": true,
+  "security": {
+    "allowedIPs": ["192.168.1.110"],
+    "protectionMode": "development"
+  }
 } 
