--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
     "@esri/arcgis-rest-feature-layer": "^3.8.0",
     "@esri/arcgis-rest-geocoding": "^3.8.0",
     "@esri/arcgis-rest-request": "^3.8.0",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^5.0.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-collapsible": "^1.1.8",
+    "@radix-ui/react-context-menu": "^2.2.12",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-hover-card": "^1.1.11",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-menubar": "^1.1.12",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-google-maps/api": "^2.19.2",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
@@ -55,51 +55,52 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.0.0",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.0.0",
     "esbuild": "^0.25.2",
     "fuse.js": "^7.0.0",
     "input-otp": "^1.1.0",
     "jotai": "^2.12.3",
     "jspdf": "^3.0.1",
-    "lucide-react": "^0.330.0",
+    "lucide-react": "^0.503.0",
     "mapbox-gl": "^3.1.2",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.12",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.6.7",
+    "react-dom": "^19.1.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.50.1",
-    "react-resizable-panels": "^1.0.9",
-    "react-router-dom": "^6.22.1",
+    "react-resizable-panels": "^2.1.8",
+    "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
-    "resend": "^3.2.0",
-    "sonner": "^1.4.0",
-    "tailwind-merge": "^2.2.1",
+    "resend": "^4.4.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.27.0",
-    "uuid": "^9.0.1",
-    "vaul": "^0.9.0",
+    "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/js": "^8.56.0",
+    "@eslint/js": "^9.25.1",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "globals": "^13.24.0",
+    "globals": "^16.0.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^7.0.1",
+    "typescript-eslint": "^8.31.0",
     "vite": "^6.3.2"
   },
   "overrides": {
@@ -110,7 +111,6 @@
     "rimraf": "^5.0.5",
     "@humanwhocodes/config-array": "@eslint/config-array",
     "@humanwhocodes/object-schema": "@eslint/object-schema",
-    "inflight": "npm:lru-cache",
-    "uuid": "^9.0.1"
+    "inflight": "npm:lru-cache"
   }
 }
