--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0",
     "esbuild": "^0.25.2",
+    "framer-motion": "^12.9.2",
     "fuse.js": "^7.0.0",
     "input-otp": "^1.1.0",
     "jotai": "^2.12.3",
