Update .gitignore, refactor App component, and enhance WorkflowAIModal
- Added environment variables for development, testing, and production to .gitignore.
- Removed SupabaseTest component from App for cleaner code.
- Refactored WorkflowAIModal to improve security features, session management, and user interaction.
- Updated navigation path for 'Workflow' in technical navigation for clarity.
- Adjusted TemplateSelector button size and layout for better UI consistency.
- Enhanced error handling and input validation in WorkflowAIModal for improved user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,17 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+.env.development
+.env.test
+.env.production
+
+# Vercel
+.vercel
+.vercel.json
+*.vercel.json
+
+# Tokens and secrets
+*.token
+*.secret
+*.key
 
