--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^1.0.9",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.0",
     "resend": "^3.2.0",
     "sonner": "^1.4.0",
