--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "input-otp": "^1.1.0",
     "jotai": "^2.12.3",
     "jspdf": "^3.0.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.330.0",
     "mapbox-gl": "^3.1.2",
     "next-themes": "^0.2.1",
@@ -67,6 +68,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.50.1",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^1.0.9",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^11.0.5",
