--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.27.0",
+    "twilio": "^5.6.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
