feat: add AddContactDialog component and integrate contact addition functionality
- Implement AddContactDialog for creating new contacts in the CRM
- Integrate contact addition into the CrmPipeline component
- Add search functionality for filtering contacts
- Enhance useCrmContacts hook with addContact and deleteContact methods
- Update mock data for consistency in last_message formatting

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 TWILIO_SID=AC1234567890abcdef1234567890abcdef
 TWILIO_AUTH_TOKEN=1234567890abcdef1234567890abcdef
 TWILIO_PHONE_NUMBER=+1234567890
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyCVHBYlen8sLxyI69WC67znnfi9SU4J0BY
