--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Supabase Configuration
 # Get these from your Supabase project dashboard -> Project Settings -> API
-VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # Vercel Configuration
@@ -8,6 +8,23 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 VERCEL_TOKEN=your_vercel_deployment_token
 VERCEL_ORG_ID=your_vercel_org_id
 VERCEL_PROJECT_ID=your_vercel_project_id
+
+# Database (for migrations)
+DATABASE_URL=your_database_url
+
+# Twilio (SMS notifications)
+TWILIO_SID=your_twilio_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_PHONE_NUMBER=your_twilio_phone_number
+
+# Google Maps
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+# ABN Lookup (Australian Business Number)
+ABN_GUID=your_abn_guid
+
+# Optional: If using a proxy
+ABN_PROXY_URL=your_proxy_url
 
 # Note: For local development:
 # 1. Copy this file to .env.local
