Enhance smoke effect in Flow component for improved visual dynamics
- Increase the number of smoke elements from 10 to 15 for a richer background effect
- Adjust smoke element sizes to be larger and more varied for enhanced depth
- Modify opacity levels in CSS for a more pronounced smoke animation

--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,25 @@ TWILIO_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
 
-# Google Maps
-VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+# Google Maps API (REQUIRED)
+# Get from: https://console.cloud.google.com/apis/credentials
+# Must enable: Maps JavaScript API, Geocoding API, and Places API
+# Required setup:
+# 1. Create a project in Google Cloud Console
+# 2. Enable billing (required even for free tier)
+# 3. Enable the required APIs
+# 4. Create an API key with appropriate restrictions
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyCBiMRL7l0cbBOXWl4-5N1_SdAKW1nXwPg
+# Google Maps API Configuration
+# Note: The example key shown above is for demonstration only
+# Replace with your own API key from Google Cloud Console
+# Required APIs to enable:
+# - Maps JavaScript API
+# - Geocoding API
+# - Places API
+# - Directions API (if using routing features)
+# - Distance Matrix API (if using distance calculations)
+
 
 # ABN Lookup (Australian Business Number)
 ABN_GUID=your_abn_guid
