--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite --port 8080",
     "dev:safe": "vite --port 8080 --host --force",
     "dev:debug": "VITE_DEBUG=true vite --port 8080 --host",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
@@ -103,6 +105,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.1",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vitest": "^1.0.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0"
   }
 }
