--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 # Other Configuration
 VITE_APP_ENV=development
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyCVHBYlen8sLxyI69WC67znnfi9SU4J0BY
+
+# Google Maps API Configuration
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyCVHBYlen8sLxyI69WC67znnfi9SU4J0BY
