Refactor workflow routes and integrate n8n functionality
- Replaced existing workflow components with n8n workflow pages for better integration.
- Updated routing structure to accommodate new n8n workflow list and detail pages.
- Enhanced error handling with a new async operation wrapper for improved reliability.
- Updated environment configuration to include n8n settings for local development.

--- a/.env.example
+++ b/.env.example
@@ -47,4 +47,10 @@ ABN_PROXY_URL=your_proxy_url
 # 1. Copy this file to .env.local
 # 2. Replace the values with your actual credentials
 # 3. Never commit your actual credentials to version control
-# 4. Store sensitive values in Vercel's environment variables for production 
+# 4. Store sensitive values in Vercel's environment variables for production
+
+# Add n8n configuration
+VITE_N8N_URL=http://localhost:5678
+
+# Example for production
+# VITE_N8N_URL=https://your-n8n-instance.com 
