--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.17.19",
     "@vercel/analytics": "^1.1.2",
-    "@xyflow/react": "^12.6.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -68,6 +67,10 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.330.0",
     "mapbox-gl": "^3.1.2",
+    "n8n": "^1.74.3",
+    "n8n-editor-ui": "^1.74.3",
+    "n8n-core": "^1.74.3",
+    "n8n-workflow": "^1.74.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
