Update n8n webhook URL configuration for local and production environments
- Added comments in .env.n8n to clarify webhook URL usage for local testing and production.
- Updated the webhook URL in setup-n8n-supabase.js to reflect the external tunnel configuration.

--- a/.env.n8n
+++ b/.env.n8n
@@ -5,6 +5,11 @@ N8N_HOST=localhost
 N8N_BASIC_AUTH_ACTIVE=true
 N8N_BASIC_AUTH_USER=admin
 N8N_BASIC_AUTH_PASSWORD=changeme123
+
+# Webhook URL Configuration
+# For local testing: http://localhost:5678/webhook
+# For external webhooks (with tunnel): https://your-id.hooks.n8n.cloud/webhook
+# For production: https://your-domain.com/webhook
 N8N_WEBHOOK_URL=http://localhost:5678/webhook
 
 # Supabase Configuration (from main .env)
