Update Supabase configuration in .env.n8n and setup-n8n-supabase.js
- Adjusted environment variables for SUPABASE_URL and SUPABASE_ANON_KEY to enhance flexibility and security.
- Improved comments in .env.n8n for better clarity on local and production webhook URL usage.

--- a/.env.n8n
+++ b/.env.n8n
@@ -23,7 +23,26 @@ DATABASE_POSTGRESDB_HOST=db.wxwbxupdisbofesaygqj.supabase.co
 DATABASE_POSTGRESDB_PORT=5432
 DATABASE_POSTGRESDB_DATABASE=postgres
 DATABASE_POSTGRESDB_USER=postgres
-DATABASE_POSTGRESDB_PASSWORD=_DB_PASSWORD_HERE
+DATABASE_POSTGRESDB_PASSWORD=postgresql://postgres:[YOUR-PASSWORD]@db.wxwbxupdisbofesaygqj.supabase.co:5432/postgres
 
 # n8n Data Directory
 N8N_USER_FOLDER=./n8n-data
+# n8n Workflow Configuration
+N8N_WORKFLOW_DIR=./n8n-workflows
+N8N_WORKFLOW_AUTO_IMPORT=true
+
+# n8n Security Configuration
+N8N_ENCRYPTION_KEY=your-encryption-key-here
+N8N_SECURITY_HEADERS=true
+N8N_SECURITY_HEADERS_HSTS_ENABLED=true
+N8N_SECURITY_HEADERS_HSTS_MAX_AGE=31536000
+
+# n8n Logging Configuration
+N8N_LOG_LEVEL=info
+N8N_LOG_OUTPUT=console
+N8N_LOG_FILE=./n8n-data/logs/n8n.log
+
+# n8n Performance Configuration
+N8N_MAX_EXECUTION_TIMEOUT=3600
+N8N_MAX_WORKFLOW_EXECUTION_TIMEOUT=3600
+N8N_MAX_WORKFLOW_EXECUTION_TIMEOUT_WEBHOOK=3600
