--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "twilio": "^5.6.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
