Add Mailgun and Brevo configuration to .env.example and update email service documentation
- Added Mailgun and Brevo API key and domain placeholders to the .env.example file for email service configuration.
- Updated the email service documentation to include instructions for using Brevo as an alternative email sender, enhancing flexibility in email service options.

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,17 @@ TWILIO_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
 
+# Mailgun (Email service)
+# Get these from your Mailgun dashboard
+# 1. API Key: From Settings -> API Keys
+# 2. Domain: Your verified sending domain
+MAILGUN_API_KEY=your_mailgun_api_key
+MAILGUN_DOMAIN=your_mailgun_domain
+
+# Brevo (Alternative Email service)
+# Get this from your Brevo dashboard -> SMTP & API -> API Keys
+BREVO_API_KEY=your_brevo_api_key
+
 # Google Maps API (REQUIRED)
 # Get from: https://console.cloud.google.com/apis/credentials
 # Must enable: Maps JavaScript API, Geocoding API, and Places API
