Add Twilio, OpenAI, DocuSeal, ArcGIS, N8N, and Admin configuration to .env.example
- Added placeholders for TWILIO_ACCOUNT_SID, OPENAI_API_KEY, VITE_DOCUSEAL_API_KEY, VITE_DOCUSEAL_API_URL, VITE_DOCUSEAL_WEBHOOK_SECRET, ARCGIS_API_KEY, VITE_N8N_URL, N8N_API_KEY, and ADMIN_SECRET_KEY to the .env.example file for enhanced service integration.
- Included notes for proper configuration and usage of the new environment variables, improving setup clarity for developers.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ DATABASE_URL=your_database_url
 TWILIO_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
+# Note: Some functions use TWILIO_ACCOUNT_SID - make sure both are set
+TWILIO_ACCOUNT_SID=your_twilio_sid
 
 # Mailgun (Email service)
 # Get these from your Mailgun dashboard
@@ -27,6 +29,28 @@ MAILGUN_DOMAIN=your_mailgun_domain
 # Brevo (Alternative Email service)
 # Get this from your Brevo dashboard -> SMTP & API -> API Keys
 BREVO_API_KEY=your_brevo_api_key
+
+# OpenAI (AI/Voice processing)
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key
+
+# DocuSeal (Document signing)
+# Get from: https://www.docuseal.co/
+VITE_DOCUSEAL_API_KEY=your_docuseal_api_key
+VITE_DOCUSEAL_API_URL=https://api.docuseal.co
+VITE_DOCUSEAL_WEBHOOK_SECRET=your_webhook_secret
+
+# ArcGIS (Geographic services - alternative to Google Maps)
+# Get from: https://developers.arcgis.com/
+ARCGIS_API_KEY=your_arcgis_api_key
+
+# N8N (Workflow automation)
+# Set this to your n8n instance URL
+VITE_N8N_URL=http://localhost:5678
+N8N_API_KEY=your_n8n_api_key
+
+# Admin functionality
+ADMIN_SECRET_KEY=your_admin_secret_key
 
 # Google Maps API (REQUIRED)
 # Get from: https://console.cloud.google.com/apis/credentials
@@ -59,9 +83,6 @@ ABN_PROXY_URL=your_proxy_url
 # 2. Replace the values with your actual credentials
 # 3. Never commit your actual credentials to version control
 # 4. Store sensitive values in Vercel's environment variables for production
-
-# Add n8n configuration
-VITE_N8N_URL=http://localhost:5678
 
 # Example for production
 # VITE_N8N_URL=https://your-n8n-instance.com 
