Update .env.example and integration documentation to reflect Twilio and OpenAI as premium features
- Marked Twilio and OpenAI integrations as premium features in the .env.example file, indicating that users on paid plans will have these features auto-enabled without configuration.
- Updated INTEGRATIONS_SETUP.md to reflect the new status of Twilio and OpenAI, clarifying that these integrations are now managed at the platform level to reduce complexity for users.
- Removed Twilio and OpenAI from the user-configurable integrations list in the integrationData.ts file, streamlining the integration setup process.

--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,13 @@ VERCEL_PROJECT_ID=your_vercel_project_id
 # Database (for migrations)
 DATABASE_URL=your_database_url
 
-# Twilio (SMS notifications)
-TWILIO_SID=your_twilio_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=your_twilio_phone_number
-# Note: Some functions use TWILIO_ACCOUNT_SID - make sure both are set
-TWILIO_ACCOUNT_SID=your_twilio_sid
+# Twilio (SMS notifications) - PREMIUM FEATURE
+# Note: Twilio integration is now a premium feature managed at platform level
+# Users don't need to configure these - they're auto-enabled for paid plans
+# TWILIO_SID=your_twilio_sid
+# TWILIO_AUTH_TOKEN=your_twilio_auth_token
+# TWILIO_PHONE_NUMBER=your_twilio_phone_number
+# TWILIO_ACCOUNT_SID=your_twilio_sid
 
 # Mailgun (Email service)
 # Get these from your Mailgun dashboard
@@ -30,9 +31,10 @@ MAILGUN_DOMAIN=your_mailgun_domain
 # Get this from your Brevo dashboard -> SMTP & API -> API Keys
 BREVO_API_KEY=your_brevo_api_key
 
-# OpenAI (AI/Voice processing)
-# Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key
+# OpenAI (AI/Voice processing) - PREMIUM FEATURE
+# Note: OpenAI integration is now a premium feature managed at platform level
+# Users don't need to configure these - they're auto-enabled for paid plans
+# OPENAI_API_KEY=your_openai_api_key
 
 # DocuSeal (Document signing)
 # Get from: https://www.docuseal.co/
