chore: update environment configuration and enhance dashboard animations
- Updated .env and .env.example files to replace sensitive keys with placeholders for better security practices.
- Refactored CustomerProgressBar and CustomerStageIndicator components to incorporate framer-motion for improved animations and user experience.
- Added new animation variants for stage indicators and progress bars, enhancing visual feedback during customer journey tracking.
- Introduced a new demo route for animated stage demonstration in the application.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Supabase Configuration
 # Get these from your Supabase project dashboard -> Project Settings -> API
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_SUPABASE_URL=your-supabase-url
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # Vercel Configuration
 # Get these from your Vercel dashboard
@@ -62,7 +62,7 @@ ADMIN_SECRET_KEY=your_admin_secret_key
 # 2. Enable billing (required even for free tier)
 # 3. Enable the required APIs
 # 4. Create an API key with appropriate restrictions
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyCBiMRL7l0cbBOXWl4-5N1_SdAKW1nXwPg
+VITE_GOOGLE_MAPS_API_KEY=your-restricted-google-maps-api-key
 # Google Maps API Configuration
 # Note: The example key shown above is for demonstration only
 # Replace with your own API key from Google Cloud Console
@@ -87,4 +87,12 @@ ABN_PROXY_URL=your_proxy_url
 # 4. Store sensitive values in Vercel's environment variables for production
 
 # Example for production
-# VITE_N8N_URL=https://your-n8n-instance.com 
+# VITE_N8N_URL=https://your-n8n-instance.com
+
+# Environment
+VITE_APP_ENV=development
+
+# Twilio Configuration (if using SMS features)
+VITE_TWILIO_SID=your-twilio-sid
+VITE_TWILIO_AUTH_TOKEN=your-twilio-auth-token
+VITE_TWILIO_PHONE_NUMBER=your-twilio-phone-number 
