feat: enhance MyPlan page with add-on management and pricing calculation
- Introduced state management for add-ons in the MyPlan page, allowing users to select and manage additional features.
- Updated pricing calculation to reflect selected add-ons, providing a dynamic total price display.
- Refactored feature display to show included features and their pricing, improving user clarity on plan benefits.
- Enhanced UI elements for better interaction and visual feedback when managing subscriptions.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "preview": "vite preview",
     "db:setup": "node scripts/db-setup.js",
     "db:reset": "npx supabase db reset",
-    "start:with-db": "npm run db:setup && npm run dev"
+    "start:with-db": "npm run db:setup && npm run dev",
+    "migrate:generate": "node scripts/deploy-migrations.js generate",
+    "migrate:deploy": "node scripts/deploy-migrations.js deploy",
+    "migrate:link": "node scripts/deploy-migrations.js link",
+    "migrate:manual": "npm run migrate:generate && echo 'Check migration-combined.sql and MIGRATION_INSTRUCTIONS.md'",
+    "migrate:verify": "node scripts/verify-migration.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
