feat: integrate Mapbox for property boundary mapping
- Added Mapbox access token configuration to the environment variables for secure access.
- Updated the ParcelMap component to utilize the Mapbox access token from environment variables, enhancing security and flexibility.
- Implemented error handling for missing Mapbox access token and map loading failures, improving user experience.
- Enhanced the PropertyBoundaries page to handle loading states and errors when loading the ParcelMap component.

--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,10 @@ VITE_GOOGLE_MAPS_API_KEY=your-restricted-google-maps-api-key
 # - Directions API (if using routing features)
 # - Distance Matrix API (if using distance calculations)
 
+# Mapbox (Alternative mapping service for property boundaries)
+# Get from: https://account.mapbox.com/access-tokens/
+# Required for property boundary mapping features
+VITE_MAPBOX_ACCESS_TOKEN=your-mapbox-access-token
 
 # ABN Lookup (Australian Business Number)
 ABN_GUID=your_abn_guid
