--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -55,6 +56,8 @@
     "@react-google-maps/api": "^2.20.6",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.17.19",
+    "@turf/bbox": "^7.2.0",
+    "@turf/turf": "^7.2.0",
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
@@ -104,6 +107,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
