--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ VITE_GOOGLE_MAPS_API_KEY=AIzaSyBFVIiAURNyUiIR_2dRQmud98q9sCn5ONI
 
 # n8n Configuration
 VITE_N8N_URL=/api
+
+# Gemini API Configuration
+VITE_GEMINI_API_KEY=AIzaSyDx0ozhGVD-k815v_C-JLF--IzihCtmYw4
+GOOGLE_API_KEY=AIzaSyDx0ozhGVD-k815v_C-JLF--IzihCtmYw4
