feat: integrate Google Generative AI into GeminiLiveAssistant
- Added support for the Google Generative AI SDK, enabling enhanced AI interactions within the GeminiLiveAssistant component.
- Updated the connection logic to validate the API key and establish a chat session with the AI model.
- Implemented streaming responses for user input, allowing for real-time interaction and feedback.
- Improved error handling and user notifications for connection and processing issues, enhancing overall user experience.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "migrate:verify": "node scripts/verify-migration.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
