chore: update environment variables and API configurations
- Replaced Google Maps and Gemini API keys with new values for security.
- Added Twilio authentication details and Google API client credentials to the environment configuration.
- Updated the path for the Gemini API request in the verification script to reflect the latest model version.

--- a/.env
+++ b/.env
@@ -6,11 +6,17 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 VITE_APP_ENV=development
 
 # Google Maps API Configuration
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyBFVIiAURNyUiIR_2dRQmud98q9sCn5ONI
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyDDJy7brTYuEoNWfE0evnC2Eo0O8Ast6Bc
 
 # n8n Configuration
 VITE_N8N_URL=/api
 
 # Gemini API Configuration
-VITE_GEMINI_API_KEY=AIzaSyDx0ozhGVD-k815v_C-JLF--IzihCtmYw4
+VITE_GEMINI_API_KEY=AIzaSyBnBRaHuvPbuqbeGlIEC40F69E0TTAzXOk
 GOOGLE_API_KEY=AIzaSyDx0ozhGVD-k815v_C-JLF--IzihCtmYw4
+
+TWILIO_AUTH_TOKEN=1234567890abcdef1234567890abcdef
+TWILIO_PHONE_NUMBER=+1234567890
+
+GOOGLE_CLIENT_ID="775734934091-mc6uhnri0hsv01e6tv6ab35g2rsvvkh9.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
