--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@turf/bbox": "^7.2.0",
     "@turf/turf": "^7.2.0",
     "@vercel/analytics": "^1.1.2",
+    "@xyflow/react": "^12.7.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
