--- a/package.json
+++ b/package.json
@@ -1,130 +1,22 @@
 {
-  "name": "trade-ease",
+  "name": "collaborative-tagging-&-annotation-tool",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8080",
-    "dev:safe": "vite --port 8080 --host --force",
-    "dev:debug": "VITE_DEBUG=true vite --port 8080 --host",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "db:setup": "node scripts/db-setup.js",
-    "db:reset": "npx supabase db reset",
-    "start:with-db": "npm run db:setup && npm run dev",
-    "migrate:generate": "node scripts/deploy-migrations.cjs generate",
-    "migrate:deploy": "node scripts/deploy-migrations.cjs deploy",
-    "migrate:link": "node scripts/deploy-migrations.cjs link",
-    "migrate:manual": "npm run migrate:generate && echo 'Check migration-combined.sql and MIGRATION_INSTRUCTIONS.md'",
-    "migrate:verify": "node scripts/verify-migration.js"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@hookform/resolvers": "^3.3.4",
-    "@lottiefiles/react-lottie-player": "^3.5.3",
-    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-google-maps/api": "^2.20.6",
-    "@supabase/supabase-js": "^2.49.8",
-    "@tanstack/react-query": "^5.17.19",
-    "@turf/bbox": "^7.2.0",
-    "@turf/turf": "^7.2.0",
-    "@vercel/analytics": "^1.1.2",
-    "@xyflow/react": "^12.7.0",
-    "axios": "^1.8.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
-    "embla-carousel-react": "^8.0.0",
-    "esbuild": "^0.25.2",
-    "framer-motion": "^12.9.2",
-    "fuse.js": "^7.0.0",
-    "input-otp": "^1.1.0",
-    "jotai": "^2.12.3",
-    "jspdf": "^3.0.1",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.330.0",
-    "mapbox-gl": "^3.1.2",
-    "n8n": "^1.98.2",
-    "n8n-core": "^1.74.3",
-    "n8n-editor-ui": "^1.74.3",
-    "n8n-workflow": "^1.74.3",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.12",
-    "react-hook-form": "^7.50.1",
-    "react-leaflet": "^5.0.0",
-    "react-resizable-panels": "^1.0.9",
-    "react-router-dom": "^7.5.3",
-    "react-toastify": "^11.0.5",
-    "recharts": "^2.12.0",
-    "resend": "^3.2.0",
-    "sonner": "^1.4.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "terser": "^5.27.0",
-    "twilio": "^5.6.0",
-    "uuid": "^9.0.1",
-    "vaul": "^0.9.0",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.5"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "lucide-react": "^0.522.0"
   },
   "devDependencies": {
-    "@eslint/js": "^8.56.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@types/jest": "^29.5.14",
-    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "globals": "^13.24.0",
-    "jsdom": "^26.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^7.0.1",
-    "vite": "^6.3.2",
-    "vitest": "^3.2.3"
+    "@types/node": "^22.14.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0"
   }
 }
