--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,30 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "target": "ES2020",
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
     "module": "ESNext",
-    "target": "ES2022",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+
+    /* Bundler mode */
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
     "noEmit": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "allowJs": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
     "strict": true,
-    "baseUrl": ".",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true,
+
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*" :  ["./*"]
     }
-  },
-  "include": ["src", "api"]
+  }
 }
