--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+tiles
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +23,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.development
+.env.test
+.env.production
+
+# Vercel
+.vercel
+.vercel.json
+*.vercel.json
+
+# Tokens and secrets
+*.token
+*.secret
+*.key
+
+
