Add Job Map diagnostics page and improve map error handling
Introduces a new JobMapTest diagnostics page for testing Google Maps API integration and job location data. Enhances JobSiteMap with improved error, loading, and empty state handling, and adds debug information. Updates Google Maps API key usage to be more explicit, sets satellite map type in SharedJobMap, and refines job form field naming. Also updates routing to include the new diagnostics page and adjusts tsconfig for project references.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,26 @@
 {
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ],
   "compilerOptions": {
-    "jsx": "react",
-    "module": "ESNext",
-    "target": "ES2022",
-    "moduleResolution": "bundler",
-    "noEmit": true,
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
     "strict": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noImplicitAny": false,
+    "noUnusedParameters": false,
+    "skipLibCheck": true,
+    "allowJs": true,
+    "noUnusedLocals": false,
+    "strictNullChecks": false,
+    "composite": true
   },
-  "include": ["src", "api"]
+  "include": ["api"]
 }
