--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@react-google-maps/api": "^2.20.6",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.17.19",
+    "@turf/bbox": "^7.2.0",
+    "@turf/turf": "^7.2.0",
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
