Update .env file to include additional API key placeholders for enhanced property analysis and voice transcription features. Added comments for Google Maps, Mapbox, ArcGIS, Real Estate APIs, and OpenAI API key usage instructions to improve developer clarity and security practices.

--- a/.env
+++ b/.env
@@ -96,4 +96,46 @@ VITE_APP_ENV=development
 # Twilio Configuration (if using SMS features)
 VITE_TWILIO_SID=your-twilio-sid
 VITE_TWILIO_AUTH_TOKEN=your-twilio-auth-token
-VITE_TWILIO_PHONE_NUMBER=your-twilio-phone-number 
+VITE_TWILIO_PHONE_NUMBER=your-twilio-phone-number
+
+# Enhanced Property Analysis API Keys
+# Copy this file to .env.local and add your actual API keys
+
+# Google Maps APIs (Recommended - Most accurate for Australian addresses)
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# Enable: Geocoding API, Roads API, Places API
+# Get keys at: https://console.cloud.google.com/apis/credentials
+
+# Mapbox APIs (Alternative/Fallback)
+VITE_MAPBOX_ACCESS_TOKEN=your_mapbox_access_token_here
+# Get token at: https://account.mapbox.com/access-tokens/
+
+# Australian Government Spatial APIs (Free - No key required for most)
+# Queensland Spatial Services: https://spatial.information.qld.gov.au/
+# NSW Spatial Services: https://www.spatial.nsw.gov.au/
+# Victorian Land Registry: https://www.land.vic.gov.au/
+
+# ArcGIS Online (Optional - for enhanced GIS analysis)
+VITE_ARCGIS_API_KEY=your_arcgis_api_key_here
+# Get key at: https://developers.arcgis.com/
+
+# Real Estate APIs (Optional - for property value/details)
+VITE_DOMAIN_API_KEY=your_domain_api_key_here
+VITE_REALESTATE_API_KEY=your_realestate_api_key_here
+
+# OpenAI API Key for Voice Transcription
+# ⚠️ SECURITY WARNING: Never share or commit your actual API key!
+# 1. Get a new API key from: https://platform.openai.com/api-keys  
+# 2. Add it to your .env.local file (this file is ignored by git)
+# 3. Keep your key secret - treat it like a password
+# OpenAI API Key for Voice Transcription
+# ⚠️ SECURITY WARNING: Never share or commit your actual API key!
+# 1. Get a new API key from: https://platform.openai.com/api-keys  
+# 2. Add it to your .env.local file (this file is ignored by git)
+# 3. Keep your key secret - treat it like a password
+REACT_APP_OPENAI_API_KEY=your-openai-api-key-here
+
+# Google Cloud Speech-to-Text API Key (Alternative to OpenAI)
+REACT_APP_GOOGLE_CLOUD_API_KEY=
+# Alternative: Keep API key on server-side for security
+OPENAI_API_KEY=your-openai-api-key-here 
