--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   ],
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
