--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.17.19",
     "@vercel/analytics": "^1.1.2",
+    "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -72,7 +73,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.330.0",
     "mapbox-gl": "^3.1.2",
-    "n8n": "^0.210.0",
+    "n8n": "^1.30.0",
     "n8n-core": "^1.74.3",
     "n8n-editor-ui": "^1.74.3",
     "n8n-workflow": "^1.74.3",
