--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@21st-extension/toolbar": "^0.5.7",
     "@eslint/js": "^8.56.0",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.6.3",
