--- a/trade-ease-mcp/package.json
+++ b/trade-ease-mcp/package.json
@@ -17,7 +17,8 @@
     "inspector": "npx @modelcontextprotocol/inspector build/index.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "0.6.0"
+    "@modelcontextprotocol/sdk": "0.6.0",
+    "@supabase/supabase-js": "^2.50.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
