--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@21st-extension/toolbar": "^0.5.7",
