Add Google Gemini API key to .env.example and enhance GeminiLiveAssistant component
Updated the .env.example file to include the Google Gemini API key for the AI Live Assistant. Enhanced the GeminiLiveAssistant component by implementing better handling for speech recognition and synthesis, including state management for speaking status and improved error handling during audio capture and speech synthesis processes. These changes improve the functionality and user experience of the AI Live Assistant.

--- a/.env.example
+++ b/.env.example
@@ -110,6 +110,12 @@ VITE_AZURE_TTS_REGION=australiaeast
 # Alternative option for high-quality voices
 VITE_OPENAI_API_KEY=your_openai_api_key_here
 
+# Google Gemini API Key (REQUIRED for AI Live Assistant)
+# Get from: https://aistudio.google.com/app/apikey
+# Free tier includes generous limits for testing
+# ⚠️ SECURITY WARNING: Never share or commit your actual API key!
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
 # Australian Government Spatial APIs (Free - No key required for most)
 # Queensland Spatial Services: https://spatial.information.qld.gov.au/
 # NSW Spatial Services: https://www.spatial.nsw.gov.au/
